# llm-wiki

./: .gitignore  .mcp.json  HOW-IT-WORKS.md  README.md  package-lock.json  package.json  tsconfig.json
mcp/: .gitignore  README.md  alembic.ini  pyproject.toml
mcp/deploy/: .env.example  Caddyfile  Caddyfile.snippet  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
mcp/deploy/backup/: backup.sh  entrypoint.sh
mcp/deploy/cron/: cron-drift.sh  cron-pipeline.sh  cron-reindex.sh  crontab.txt  entrypoint.sh
mcp/deploy/deployer/: Dockerfile  entrypoint.sh  poll.sh
mcp/deploy/scripts/: patch_elf.py
mcp/migrations/: env.py
mcp/migrations/versions/: 0001_initial.py  a3b7c9d4e5f6_notifications.py  b71287ba6af3_chat_tables.py  d55aee795405_recent_views.py
mcp/prd_mcp/: answer.py  chunk.py  cli.py  config.py  env_secret.py  index.py  keychain.py  llm.py  read.py  retrieve.py  server.py  store.py  vault.py
mcp/prd_mcp/web/: admin.py  app.py  auth.py  chat.py  chatmodels.py  coredeps.py  db.py  errors.py  manifests.py  models.py  notifications.py  prd.py  ratelimit.py  rbac.py  schemas.py  security.py  seed.py  sessions.py  settings.py  sources.py  status.py
mcp/tests/: test_answer.py  test_answer_stream.py  test_chunk.py  test_config.py  test_env_secret.py  test_index.py  test_index_manifest.py  test_llm.py  test_manifests.py  test_read.py  test_retrieve.py  test_server.py  test_store.py  test_store_cards.py  test_vault.py
mcp/tests/fixtures/: EP-468-sample.md
mcp/tests/web/: _concurrency_app.py  conftest.py  test_admin_roles.py  test_admin_settings.py  test_admin_users.py  test_app_core.py  test_auth_endpoints.py  test_chat_api.py  test_chat_concurrency.py  test_chatmodels.py  test_coredeps.py  test_crossplan_manifest.py  test_csrf.py  test_errors.py  test_fixtures_smoke.py  test_healthz.py  test_invariants.py  test_lifecycle.py  test_migration.py  test_models.py  test_notifications.py  test_prd_api.py  test_prd_health.py  test_ratelimit.py  test_rbac.py  test_schemas.py  test_security.py  test_seed.py  test_sessions.py  test_settings.py  test_status_api.py
mcp/web-ui/: .oxlintrc.json  Dockerfile.build  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
mcp/web-ui/e2e/: fixtures.ts  phase3.spec.ts
mcp/web-ui/playwright-report/: index.html
mcp/web-ui/src/: App.tsx  index.css  main.tsx  test-setup.ts
mcp/web-ui/src/components/: AppShell.test.tsx  AppShell.tsx  ChangePasswordDialog.tsx  CommandPalette.test.tsx  CommandPalette.tsx  ConversationList.tsx  DataTable.tsx  EmptyState.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  KbdHint.tsx  MarkdownView.test.tsx  MarkdownView.tsx  PageHeader.tsx  RelativeTime.tsx  RequirePermission.tsx  ResetPasswordDialog.tsx  RoleChip.tsx  SetupChecklist.test.tsx  SetupChecklist.tsx  StatCard.tsx  StatusDot.tsx  (+1 more)
src/: gate.ts  (+17 more)
(+131 files in other folders)
